--- a/basic-ts-api/package.json
+++ b/basic-ts-api/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "basic-ts-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "scripts": {
-    "start": "node dist/src/index.js",
-    "build": "tsc",
-    "test": "jest --coverage --runInBand --no-cache",
-    "test:watch": "jest --watchAll --runInBand"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/jest": "^24.0.18",
-    "@types/koa": "^2.0.49",
-    "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-router": "^7.0.42",
-    "@types/mockdate": "^2.0.0",
-    "@types/mongodb": "^3.3.1",
-    "@types/supertest": "^2.0.8",
-    "jest": "^24.9.0",
-    "mockdate": "^2.0.5",
-    "mongodb-memory-server": "^5.2.3",
-    "supertest": "^4.0.2",
-    "ts-jest": "^24.1.0",
-    "typescript": "^3.5.2"
-  },
-  "dependencies": {
-    "fast-speedtest-api": "^0.3.2",
-    "koa": "^2.8.1",
-    "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0",
-    "mongodb": "^3.3.2"
-  }
+                                                                                "name": "basic-ts-api",
+                                                                                "version": "1.0.0",
+                                                                                "description": "",
+                                                                                "main": "dist/index.js",
+                                                                                "scripts": {
+                                                                                                                                                                "start": "node dist/index.js",
+                                                                                                                                                                "build": "tsc",
+                                                                                                                                                                "test": "jest --coverage --runInBand --no-cache",
+                                                                                                                                                                "test:watch": "jest --watchAll --runInBand"
+                                                                                },
+                                                                                "keywords": [],
+                                                                                "author": "",
+                                                                                "license": "ISC",
+                                                                                "devDependencies": {
+                                                                                                                                                                "@types/jest": "^24.0.18",
+                                                                                                                                                                "@types/koa": "^2.0.49",
+                                                                                                                                                                "@types/koa-bodyparser": "^4.3.0",
+                                                                                                                                                                "@types/koa-router": "^7.0.42",
+                                                                                                                                                                "@types/mockdate": "^2.0.0",
+                                                                                                                                                                "@types/mongodb": "^3.3.1",
+                                                                                                                                                                "@types/supertest": "^2.0.8",
+                                                                                                                                                                "jest": "^24.9.0",
+                                                                                                                                                                "mockdate": "^2.0.5",
+                                                                                                                                                                "mongodb-memory-server": "^5.2.3",
+                                                                                                                                                                "supertest": "^4.0.2",
+                                                                                                                                                                "ts-jest": "^24.1.0",
+                                                                                                                                                                "typescript": "^3.5.2"
+                                                                                },
+                                                                                "dependencies": {
+                                                                                                                                                                "fast-speedtest-api": "^0.3.2",
+                                                                                                                                                                "koa": "^2.8.1",
+                                                                                                                                                                "koa-bodyparser": "^4.2.1",
+                                                                                                                                                                "koa-router": "^7.4.0",
+                                                                                                                                                                "mongodb": "^3.3.2"
+                                                                                }
 }
