--- a/fastify-bootstrap-api/package.json
+++ b/fastify-bootstrap-api/package.json
@@ -9,12 +9,15 @@
   "scripts": {
     "test": "tap test/**/*.test.js",
     "start": "fastify start -l info app.js",
-    "dev": "fastify start -w -l info -P app.js"
+    "debug": "fastify start -d -I 9229 -l info app.js",
+    "dev": "fastify start -w --ignore-watch='data' -l info -P app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "db-migrate": "^0.11.11",
+    "db-migrate-pg": "^1.2.2",
     "dotenv": "^8.2.0",
     "fastify": "^2.0.0",
     "fastify-autoload": "^1.0.0",
